--- a/static/style.css
+++ b/static/style.css
@@ -1,48 +1,21 @@
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#map {
+    height: 600px;
+    width: 100%;
 }
 
-h1 {
-    color: #0066cc;
+body {
+    font-family: Arial, sans-serif;
+}
+
+.watering-place-list {
     margin-top: 20px;
 }
 
-#map {
-    height: 500px;
-    width: 80%;
-    margin: 20px 0;
+.watering-place-item {
+    margin-bottom: 10px;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-li {
-    background: #fff;
-    border: 1px solid #ddd;
-    padding: 10px;
-    margin: 5px 0;
-    width: 100%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-li a {
-    text-decoration: none;
-    color: #0066cc;
-}
-
-li a:hover {
-    text-decoration: underline;
+.btn-group .btn.active {
+    background-color: #0056b3;
+    border-color: #004085;
 }
