--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abbeveratoi in Sicilia</title>
+    <!-- Montserrat Font -->
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.js"></script>
@@ -12,7 +14,16 @@
 </head>
 
 <body>
+    <div
+        style="background-color: #ADD8E6; color: #00008B; padding: 10px; text-align: center; display: flex; justify-content: center; align-items: center; height: 75px; font-size: 24px;">
+        <a href="https://angelofranciamore.it" target="_blank"
+            style="color: #00008B; text-decoration: none; font-weight: bolder;font-family: Montserrat; padding: auto;">Made
+            by
+            Angelo
+            Franciamore</a>
+    </div>
     <div class="container">
+
         <h1 class="mt-5">Abbeveratoi in Sicilia</h1>
         <div id="map"></div>
 
